--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "simple-git-hooks": "^2.8.0",
+    "simple-git-hooks": "^2.8.1",
     "stylelint": "^14.10.0",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^27.0.0",
@@ -69,6 +69,6 @@
     ]
   },
   "simple-git-hooks": {
-    "pre-commit": ". ./lint-staged-each.sh"
+    "pre-commit": "npm run lint-staged"
   }
 }
