--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx,html,json,gql,graphql}'",
     "fix": "npm run --silent format; npm run --silent lint:fix",
     "preinstall": "npx typesync || :",
-    "prepare": "npx simple-git-hooks || :"
+    "prepare": "npx simple-git-hooks || :",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.8",
