--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "zustand": "^4.1.4"
